Fix regression caused by #2010
Remove this from tweaks as it introduced bugs. The only riskfree way of changing the headerbar outside of _common is to re-insert it, like we did in _headerbar.scss for the default theme. Asking upstream to fix this uneven borders so the diff is gone again.

--- a/gtk/src/default/gtk-3.20/_common.scss
+++ b/gtk/src/default/gtk-3.20/_common.scss
@@ -1618,8 +1618,8 @@ headerbar {
   button.toggle:checked {
 
     background: if($variant == 'light', image(darken($bg_color, 17%)), image(darken($bg_color, 9%)));
-    border-color: darken($borders_color, 3%);
-    border-top-color: darken($borders_color, 8%);
+    border-color: darken($borders_color, 6%);
+    // border-top-color: darken($borders_color, 8%);
     &:backdrop {
       @include button(backdrop-active);
     }
